[project]
name = "toga-toast"
version = "0.3.0"
description = ""
authors = [
    {name = "tct123",email = "42028373+tct123@users.noreply.github.com"}
]
readme = "README.md"
repository= "https://github.com/Creative-Media-Group/toga-toast"
requires-python = ">=3.8"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
